# scriba

./: .coverage  .gitignore  .gitnexusrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE2_DECISIONS.md  README.md  SECURITY.md  STABILITY.md  build_bug_comparison.py  pyproject.toml  render-bugs-demo.tex  render.py
.demo/: _trace.html  apartments.html  apartments.tex  apt_window_anim.html  apt_window_anim.tex  apt_window_diagram.tex  cdp_probe.py  graph_edge.html  graph_edge.tex  graph_edge_auto.html  graph_edge_auto.tex  graph_edge_stable.html  graph_edge_stable.tex  scriba-chrome-compact.html  scriba-layout-redesign.html  tree_move.html  tree_move.tex
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY_CONTACTS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
_bmad/: config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  design-invariant-panel-restyle.md  judgezone-2026-07-08-batch-closure-summary.md  spec-fix-annot-pill-face-scriba-sans.md  spec-fix-annot-pill-font-clash.md  spec-fix-invariant-theorem-box.md  spec-fix-judgezone-09-14-theme-attr-contract.md  spec-fix-judgezone-10-accessible-name-policy.md  spec-fix-judgezone-11-interp-shape-gate.md  spec-fix-judgezone-12-below-band-reservation.md  spec-fix-judgezone-13-label-one-interpretation.md  spec-fix-judgezone-15-top-band-reservation.md  spec-fix-judgezone-16-leader-span.md  spec-fix-judgezone-17a-caption-extent.md  spec-fix-judgezone-17b-chrome-clearance.md  spec-fix-shell-panel-single-source.md
_bmad-output/planning-artifacts/: scriba-annotation-legibility-structural-lift.md  scriba-smart-label-structural-plan.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
benchmarks/: baseline.json  bench_render.py  ci_regression_check.py
docs/: 00-ARCHITECTURE-DECISION-2026-04-09.md  00-AUDIT-2026-04-09.md  01-architecture.md  02-tex-plugin.md  03-diagram-plugin.md  04-environments-spec.md  04-packaging.md  04-roadmap.md  05-implementation-phases.md  05-migration.md  05-scene-ir.md  06-out-of-scope.md  06-primitives.md  07-open-questions.md  07-starlark-worker.md  08-svg-emitter.md  08-usage-example.md  09-animation-css.md  09-animation-plugin.md  EDITORIAL-PRINCIPLES-V2.md  PHASE-A-PLAN.md  PHASE-B-PLAN.md  PHASE-C-PLAN.md  PHASE-D-PLAN.md  README.md  RULESET.md  SCRIBA-TEX-REFERENCE.md  csp-deployment.md
docs/analysis/: layout-seed-analysis-2026-06-03.md  smart-label-convex-hull-trick.md  tex-reference-audit-2026-06-01.md
docs/archive/: C1-foreach-plan.md  DX-PLAN.md  M2-reannotate-plan.md  M5-M6-M7-plans.md  PHASE-D-PLAN.md  PRIMITIVES-PLAN.md  SVG-DEDUP-PLAN.md  audit-2026-04-09.md  deep-analysis-2026-04-10.md  generality-audit-2026-04-11.md  graph-edge-pill-logic-2026-04-23.md  hardcoded-positions-audit-2026-04-11.md  ruleset-audit-2026-04-11.md  ruleset-review-2026-04-10.md  tikz-vs-scriba-editorial.md  transition-fix-plan-2026-04-13.md  ux-improvements-2026-04-15.md  v020-verify.md  verify-2026-04-09.md
docs/blog/: community-threads.md  launch-0.5.0.md
docs/conventions/: principles.md
docs/cookbook/: 11-loop-to-step-manual-unroll.md  12-foreach-apply-dp-table.md  HARD-TO-DISPLAY-COVERAGE.md  HARD-TO-DISPLAY.md  README.md
docs/extensions/: SANITIZER-WHITELIST-DELTA.md  fastforward.md  figure-embed.md  hl-macro.md  keyframe-animation.md  substory.md
docs/formal/: README.md  smart-label-model.als
docs/guides/: animation-plugin.md  diagram-plugin.md  editorial-principles.md  embedding-in-website.md  hidden-state-pattern.md  how-to-animate-dp.md  how-to-animate-graphs.md  how-to-debug-errors.md  how-to-use-diagrams.md  strict-mode.md  tex-authoring.md  tex-plugin.md  usage-example.md
docs/legacy/: ANIMATION-RULESET.md  EDITORIAL-PRINCIPLES-V2.md  EDITORIAL-PRINCIPLES.md  PHASE2_DECISIONS.md  README.md  STATIC-FIGURE-RULESET.md  USAGE-DIAGRAM-WIDGET.md  mock-diagram-widget.html
docs/operations/: migration.md  packaging.md
docs/ops/: dep-cve-baseline.md  (+1 more)
examples/: build.sh  demo.html  demo.tex  demo01.html  demo01.tex  demo02.html  demo02.tex  demo03.html  demo04.html  demo04.tex  demo05.html  demo05.tex  demo06.html  demo06.tex  demo07.html  demo07.tex  demo08.html  demo09.html  demo09.tex  demo10.html  demo_diagram.html  demo_diagram.tex  demo_expected.html  demo_grid.html  demo_grid.tex  demo_hl.html  demo_hl.tex  demo_keyframes_note.md  demo_matrix.html  demo_numberline.html  demo_numberline.tex  demo_stack.html  demo_stack.tex  demo_tex.html  demo_tex.tex  django_integration.py  fastapi_integration.py  flask_integration.py  mcmf.tex  plane2d_ticks.tex  (+1 more)
homebrew/: README.md  setup-tap.sh
investigations/: allscript-architecture.md  allscript-render-audit.md  allscript-shaping.md  anim-multicursor.md  anim-narrate-focus.md  anim-reflow-sentinel.md  anim-runtime-reverse.md  anim-unified-motion-model.md  audit-decoration-obstacle-class.md  audit-node-targeting-class.md  bmad-rq-caret.md  bmad-rq-measure.md  bmad-rq-nodefit.md  bmad-rq-valuegrow.md  bmad-rq-viewport.md  byte-identity-asset-inlining.md  completeness-census-post-0.24.md  darkmode-edge-contrast.md  design-accumulate.md  design-decorate.md  design-emphasis-selfannounce.md  design-math.md  design-shared-obstacle.md  design-value-flipback.md  design-viewport.md  docs-author-audit.md  docs-brevity-audit.md  docs-generality-audit.md  error-message-quality.md  feat-grid-block-selector.md  feat-label-state-colors.md  feat-trace-primitive.md  fixedbox-content-sizing.md  folabel-emit-honesty.md  folabel-fonts.md  folabel-measure.md  folabel-sweep-fo-surface.md  folabel-sweep-katex-cells.md  folabel-sweep-measure-callers.md  fp2-isolated-registries.md  (+58 more)
scriba/: __init__.py  _version.py  cli.py
scripts/: analyze_labels.py  build_katex_metrics.py  build_text_font.py  check_deps.sh  check_ruleset_sync.py  lint_smart_label.py  screenshot_audit.py  vendor_katex.sh
tests/: conftest.py  test_runtime_probe.py
(+2255 files in other folders)
