[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scriba"
version = "0.5.0"
description = "Backend Python library for rendering LaTeX problem statements and CP editorial animations to self-contained HTML"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "latex",
  "katex",
  "online-judge",
  "problem-statement",
  "renderer",
  "competitive-programming",
  "editorial",
  "animation",
]
# TODO: confirm maintainer contact email before first public release
authors = [{ name = "OJCloud", email = "maintainers@ojcloud.dev" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
  "pygments>=2.17,<2.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "bleach>=6.1",
  "lxml>=5.0",
  "hypothesis>=6.100",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/ojcloud/scriba"       # TODO: confirm URL
Repository = "https://github.com/ojcloud/scriba"     # TODO: confirm URL
Issues = "https://github.com/ojcloud/scriba/issues"  # TODO: confirm URL
Documentation = "https://github.com/ojcloud/scriba/tree/main/docs"  # TODO: confirm URL

[tool.hatch.build.targets.wheel]
packages = ["scriba"]
# Ship user-facing docs with the wheel; exclude internal design logs.
include = [
  "scriba/**",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "LICENSE",
]
exclude = [
  "PHASE2_DECISIONS.md",
  "tests/**",
  "examples/**",
]

[tool.hatch.build.targets.wheel.package-data]
"scriba" = ["py.typed"]
"scriba.tex" = ["katex_worker.js", "static/*.css", "static/*.js", "vendor/katex/*.js", "vendor/katex/*.css", "vendor/katex/*.md", "vendor/katex/LICENSE", "vendor/katex/fonts/*.woff2"]
"scriba.animation" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Coverage is NOT wired into default pytest args — run explicitly via
#   uv run pytest --cov=scriba --cov-report=term-missing
# to avoid slowing the default suite down with instrumentation.
[tool.coverage.run]
source = ["scriba"]
branch = true
omit = [
  "scriba/_version.py",
  "scriba/animation/starlark_worker.py",  # subprocess entrypoint
  "scriba/tex/katex_worker.js",           # JS, not Python
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
